[gd_scene load_steps=24 format=3 uid="uid://bql8552mseehl"]

[ext_resource type="Script" uid="uid://bxee71sal1omr" path="res://scripts/three_cards.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b8tee5cidprli" path="res://scenes/card.tscn" id="2"]
[ext_resource type="Shader" uid="uid://xxn1vfn5jas6" path="res://shader/dissolve.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://d0eswjpmr8815" path="res://shader/enchanted.png" id="4"]
[ext_resource type="Texture2D" uid="uid://8fqb1jctjwhr" path="res://UI/gradient.png" id="5"]
[ext_resource type="Texture2D" uid="uid://1mmeckymogqg" path="res://UI/yes.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cnpbpg355dlmu" path="res://UI/swap.png" id="7"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dndxo"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ytsrw"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_dndxo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uhtbp"]
resource_local_to_scene = true
shader = ExtResource("3")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_ytsrw")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("4")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.615686, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0901961, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = true
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[sub_resource type="FastNoiseLite" id="FastNoiseLite_udpys"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nbv1o"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_udpys")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gsyvc"]
resource_local_to_scene = true
shader = ExtResource("3")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_nbv1o")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("4")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.615686, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0901961, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = true
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7oedk"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mi65n"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_7oedk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0lsu2"]
resource_local_to_scene = true
shader = ExtResource("3")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_mi65n")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("4")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.615686, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0901961, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = true
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[sub_resource type="Shader" id="Shader_kq85c"]
code = "shader_type canvas_item;
uniform float alpha : hint_range(0.0, 1.0);

void fragment() {
	COLOR.a = alpha*COLOR.a;
}

"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p4yxq"]
shader = SubResource("Shader_kq85c")
shader_parameter/alpha = 1.0

[sub_resource type="Shader" id="Shader_0djxw"]
code = "shader_type canvas_item;

uniform float offset = -170;

void vertex() {
	VERTEX.x += offset;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qrq6x"]
shader = SubResource("Shader_0djxw")
shader_parameter/offset = -170.0

[sub_resource type="Shader" id="Shader_nohcj"]
code = "shader_type canvas_item;

uniform float offset = 170;

void vertex() {
	VERTEX.x += offset;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m8yr3"]
shader = SubResource("Shader_nohcj")
shader_parameter/offset = 170.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k4oqb"]

[node name="ThreeCards" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1")

[node name="Card" parent="." instance=ExtResource("2")]
material = SubResource("ShaderMaterial_uhtbp")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.182604
anchor_top = 0.225
anchor_right = 0.362604
anchor_bottom = 0.673889
offset_left = 86.4
offset_top = 121.2
offset_right = -86.4
offset_bottom = -121.2
scale = Vector2(2, 2)
movable = false

[node name="Card2" parent="." instance=ExtResource("2")]
material = SubResource("ShaderMaterial_gsyvc")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4175
anchor_top = 0.225
anchor_right = 0.5975
anchor_bottom = 0.673889
offset_left = 86.4
offset_top = 121.2
offset_right = -86.3999
offset_bottom = -121.2
scale = Vector2(2, 2)
movable = false

[node name="Card3" parent="." instance=ExtResource("2")]
material = SubResource("ShaderMaterial_0lsu2")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.649271
anchor_top = 0.225
anchor_right = 0.829271
anchor_bottom = 0.673889
offset_left = 86.4
offset_top = 121.2
offset_right = -86.3999
offset_bottom = -121.2
scale = Vector2(2, 2)
movable = false

[node name="Label" type="Label" parent="."]
visible = false
material = SubResource("ShaderMaterial_p4yxq")
layout_mode = 0
offset_left = 645.0
offset_top = 96.0
offset_right = 1284.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 40
text = "右键查看卡牌效果
Right click to see the card's effect"
horizontal_alignment = 1
vertical_alignment = 1

[node name="leftbuttonbg" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.423529)
material = SubResource("ShaderMaterial_qrq6x")
layout_mode = 0
offset_left = -562.0
offset_top = 819.0
offset_right = 1446.0
offset_bottom = 965.0
mouse_filter = 2
texture = ExtResource("5")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="leftbuttonbg"]
self_modulate = Color(0.41, 0.41, 0.41, 1)
use_parent_material = true
layout_mode = 0
offset_left = 582.0
offset_top = 13.0
offset_right = 697.0
offset_bottom = 133.0
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 4

[node name="rightbuttonbg" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.423529)
material = SubResource("ShaderMaterial_m8yr3")
layout_mode = 0
offset_left = 507.0
offset_top = 819.0
offset_right = 2515.0
offset_bottom = 965.0
mouse_filter = 2
texture = ExtResource("5")
expand_mode = 1
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="rightbuttonbg"]
self_modulate = Color(0.41, 0.41, 0.41, 1)
use_parent_material = true
layout_mode = 0
offset_left = 1275.0
offset_top = 24.0
offset_right = 1380.0
offset_bottom = 119.0
mouse_filter = 2
texture = ExtResource("7")
expand_mode = 1
stretch_mode = 4

[node name="Confirm" type="Button" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = 819.0
offset_right = 696.0
offset_bottom = 965.0
theme_override_font_sizes/font_size = 35
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k4oqb")
text = "CONFIRM"
flat = true
alignment = 2

[node name="Refresh" type="Button" parent="."]
layout_mode = 0
offset_left = 1247.0
offset_top = 819.0
offset_right = 1952.0
offset_bottom = 965.0
theme_override_font_sizes/font_size = 35
text = "SKIP"
flat = true
alignment = 0

[connection signal="pressed" from="Card" to="." method="_on_card_pressed"]
[connection signal="pressed" from="Card2" to="." method="_on_card_2_pressed"]
[connection signal="pressed" from="Card3" to="." method="_on_card_3_pressed"]
[connection signal="mouse_entered" from="Confirm" to="." method="_on_confirm_mouse_entered"]
[connection signal="mouse_exited" from="Confirm" to="." method="_on_confirm_mouse_exited"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="mouse_entered" from="Refresh" to="." method="_on_refresh_mouse_entered"]
[connection signal="mouse_exited" from="Refresh" to="." method="_on_refresh_mouse_exited"]
[connection signal="pressed" from="Refresh" to="." method="_on_refresh_pressed"]
